--- a/analysis/analysis_new.qmd
+++ b/analysis/analysis_new.qmd
@@ -74,7 +74,6 @@ table_dvour <- function(g) {
 }
 
 ## plot for participant effects
-
 p_dvour <- function(m, colors){
   m |>
     mutate(
@@ -180,9 +179,10 @@ rate1 <- table(df1$Feedback_LabelsIncorrect)["True"] / sum(table(df1$Feedback_La
 
 The rate of people that did not believe the instructions in study 1 (i.e., gave feedback that the labels were incorrect) was `r round(mean(rate1) * 100, 1)`%.
 
-::: {.panel-tabset}
 
 ## Models
+
+::: {.panel-tabset}
 
 ### Arousal
 
@@ -310,7 +310,7 @@ p_dvour(m, colors)
 ```{r df 1 corr}
 
 correlations <- df1 |>
-  select(Participant, starts_with("Feedback"), starts_with("BAIT"), starts_with("GAIS"), starts_with("Porn"), "AI_Knowledge", "SexualActivity_num", "COPS_Frequency_2")
+  select(Participant, starts_with("Feedback"), starts_with("BAIT"), starts_with("GAAIS"), starts_with("Porn"), "AI_Knowledge", "SexualActivity_num", "COPS_Frequency_2")
 
 
 corr_mod <- function(m, correlations){
@@ -597,9 +597,9 @@ rate2 <- table(df2$Feedback_AllReal)["True"] / sum(table(df2$Feedback_AllReal))
 
 In study 2 (i.e., gave feedback that all images were real images) was `r round(mean(rate2) * 100, 1)`%. 
 
-::: {.panel-tabset}
 
 ## Models
+::: {.panel-tabset}
 
 ### Arousal
 
@@ -961,3 +961,183 @@ p_dvour(m, colors2)
 corr_mod(m, correlations2)
 ``` 
 :::
+
+# Figures 
+
+```{r}
+df_long <- df1 |>
+  select(Gender, Condition, Arousal, Enticement, Valence) |>
+  pivot_longer(cols = c(Arousal, Enticement, Valence),
+               names_to = "Outcome",
+               values_to = "Score") |>
+  mutate(Outcome = factor(Outcome, levels = c("Arousal", "Enticement", "Valence")),
+         Gender = fct_relevel(Gender, "Male", "Female"),
+         Condition = fct_relevel(Condition, "Photograph", "AIGenerated"),
+         Condition = fct_recode(Condition, "Photograph"="Photograph", "AI-Generated" = "AIGenerated")) 
+
+# Plot
+dist_plot <- df_long |>
+  ggplot(aes(x = Score, fill = Condition)) +
+  geom_histogram(position = "identity", alpha = 0.5, colour = "black", bins = 30) +
+  facet_grid(Outcome ~ Gender, switch = "y", scales = "free") +
+  scale_fill_manual(values = c("AI-Generated" = "#2196F3", "Photograph" = "#F44336")) +
+  labs(fill = "Condition:") +
+  theme_minimal() +
+  theme(axis.title.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text = element_text(face = "bold", size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(hjust=1, vjust=1.1, size=9, color="black"),
+        legend.text = element_text(size = 10),
+        legend.title = element_text(size = 10, face = "bold"), 
+        legend.position = "bottom")
+
+dist_plot
+```
+
+
+```{r}
+df_diff_long <- dfsub1 |>
+  right_join(
+    df1 |>
+      group_by(Participant, Condition) %>%
+      summarise(
+        mean_arousal = mean(Arousal, na.rm = TRUE),
+        mean_enticement = mean(Enticement, na.rm = TRUE),
+        mean_valence = mean(Valence, na.rm = TRUE),
+        .groups = "drop")|>
+      pivot_wider(
+        names_from = Condition,
+        values_from = c(mean_arousal, mean_enticement, mean_valence),
+        names_sep = "_") |>
+      mutate(
+        diff_arousal = mean_arousal_AIGenerated - mean_arousal_Photograph,
+        diff_enticement = mean_enticement_AIGenerated - mean_enticement_Photograph,
+        diff_valence = mean_valence_AIGenerated - mean_valence_Photograph)
+  ) |>
+  pivot_longer(
+    cols = starts_with("diff_"),
+    names_to = "Outcome",
+    values_to = "Diff") |>
+  mutate(
+    Outcome = factor(Outcome, levels = c("diff_arousal", "diff_enticement", "diff_valence"),
+                     labels = c("Arousal", "Enticement", "Valence")),
+    Feedback_AILessArousing = as.factor(Feedback_AILessArousing))
+
+# Plot
+diff_plot_long <- df_diff_long |>
+  ggplot(aes(x = Feedback_AILessArousing, y = Diff, fill = Feedback_AILessArousing)) +
+  geom_boxplot(width = 0.4, alpha = 0.7) +
+  geom_jitter(width = 0.2, alpha = 0.1, size = 1) +
+  stat_summary(fun = mean, geom = "point", shape = 23, size = 2, fill = "black") +
+  facet_grid(Outcome ~ ., switch = "y") +  
+  scale_fill_manual(values = c("True" = "#E66100", "False" = "#5D3A9B")) +
+  labs(fill = "Feedback that AI is less arousing: ") +
+  theme_minimal() +
+  theme(axis.title.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text = element_text(face = "bold", size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(hjust=1, vjust=1.1, size=9, color="black"),
+        legend.text = element_text(size = 10),
+        legend.title = element_text(size = 10, face = "bold"), 
+        legend.position = "bottom")
+
+diff_plot_long
+```
+
+```{r}
+
+pred1 <- 
+  rbind(
+  modelbased::estimate_means(m_arousal, by=c("Sex", "Relevance", "Condition"), backend = "emmeans") |>
+  as.data.frame() |> 
+  mutate(Outcome="Arousal"),
+  modelbased::estimate_means(m_enticement, by=c("Sex", "Relevance", "Condition"),backend = "emmeans") |>
+  as.data.frame() |> 
+  mutate(Outcome="Enticement"),
+  modelbased::estimate_means(m_valence, by=c("Sex", "Relevance", "Condition"),backend = "emmeans") |>
+  as.data.frame() |> 
+  mutate(Outcome="Valence"))
+
+stars1 <- data.frame(label=c("***", "***", "*", "***"),
+                    Sex=fct_relevel(c("Male", "Male", "Male", "Male"), "Male"),
+                    Relevance=c("Relevant", "Relevant", "Non-erotic", "Relevant"),
+                    Outcome=c("Arousal", "Enticement", "Enticement", "Valence"),
+                    y=c(0.75, 0.8, 0.2, 0.8))
+
+
+p1 <- pred1 |>
+  mutate(Sex = fct_relevel(Sex, "Male", "Female")) |> 
+  ggplot(aes(x=Relevance, y=Proportion)) +
+  geom_hline(yintercept=0, color="darkgrey") +
+  geom_line(aes(group=Condition, color=Condition), position = position_dodge(width=0.2), alpha=0.8, linewidth=0.2) +
+  geom_pointrange(aes(ymin = CI_low, ymax=CI_high, color=Condition), position = position_dodge(width=0.2), size=0.2) +
+  geom_text(data=stars1, aes(y=y, label=label), hjust=0.5, size=3) +
+  geom_rect(data=data.frame(Type="All trials", Proportion=0.1, Sex=as.factor("Male"), Outcome="Arousal", Relevance="Relevant"), 
+            aes(xmin=0.8, xmax=1.2, ymin=0.5, ymax=0.80), color="#8BC34A", alpha=0) +
+  geom_rect(data=data.frame(Type="All trials", Proportion=0.1, Sex=as.factor("Female"), Outcome="Arousal", Relevance="Relevant"), 
+            aes(xmin=0.8, xmax=1.2, ymin=0.2, ymax=0.5), color="#8BC34A", alpha=0) +
+  facet_grid(Outcome~Sex, switch="y") +
+  scale_y_continuous(limits=c(0, 1), labels=scales::percent) +
+  scale_color_manual(values=c("AI-Generated"="#2196F3", "Photograph"="#F44336")) +
+  theme_minimal() +
+  theme(axis.title.y = element_blank(),
+        axis.title.x = element_blank(),
+        axis.text.y = element_text(size = 8),
+        strip.placement = "outside",
+        strip.background.x = element_rect(fill=c("lightgrey"), color=NA),
+        strip.text.x = element_text(size = 10),
+        strip.text.y = element_text(size = 10),
+        axis.text.x = element_text(angle=25, hjust=1, vjust=1.1, size=9, color="black"),
+        legend.text = element_text(size = 10),
+        legend.position = "bottom") +
+  labs(color="Images presented as:",
+       tag = "A")
+```
+
+# ```{r}
+# 
+# pred_interactions <- pred_interactions %>%
+#   mutate(
+#     Gender = fct_relevel(Gender, "Male", "Female"),
+#     Outcome = factor(Outcome, levels = c("Arousal", "Enticement", "Valence"))
+#   )
+# 
+# p_interactions <- ggplot(
+#   pred_interactions,
+#   aes(x = Relevance, y = Estimate, color = Condition, group = Condition)
+# ) +
+#   geom_hline(yintercept = 0, color = "grey80") +
+#   geom_line(position = position_dodge(width = 0.2), linewidth = 0.3) +
+#   geom_pointrange(
+#     aes(ymin = CI_low, ymax = CI_high),
+#     position = position_dodge(width = 0.2),
+#     size = 0.3
+#   ) +
+#   facet_grid(Outcome ~ Gender, switch = "y") +
+#   scale_color_manual(
+#     values = c("AIGenerated" = "#2196F3", "Photograph" = "#F44336")
+#   ) +
+#   labs(
+#     x = "Image Relevance",
+#     y = "Predicted Rating",
+#     color = "Image label"
+#   ) +
+#   theme_minimal() +
+#   theme(
+#     strip.placement = "outside",
+#     strip.background = element_rect(fill = "lightgrey", color = NA),
+#     strip.text = element_text(size = 10),
+#     axis.text.x = element_text(angle = 25, hjust = 1),
+#     legend.position = "bottom"
+#   )
+# 
+# p_interactions
+# ```
